# scrappey.js

./: axios.js  fetch.js  index.js  main.js  package-lock.json  package.json  readme.md
.github/workflows/: publish.yml
examples/csharp/: Example.cs
examples/curl/: examples.sh
examples/go/: example.go
examples/java/: Example.java  pom.xml
examples/nodejs/: axios-example.js  example.js  fetch-example.js  package.json
examples/php/: example.php
examples/python/: example.py  requirements.txt
examples/ruby/: Gemfile  example.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/typescript/: example.ts  package.json  tsconfig.json
src/: scrappey.js
src/adapters/: axios.js  fetch.js
tests/: adapters.test.js
types/: index.d.ts
types/adapters/: axios.d.ts  fetch.d.ts
wrapper/: scrappey.js
