[package]
name = "scrappey-example"
version = "1.0.0"
edition = "2021"
description = "Scrappey API example in Rust"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
